optimizing guess the graph